<resources>
    <string name="app_name">multipleRecycler</string>
    <string name="log_in_with">Log in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_id">Email ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up2">SIGN UP</string>
    <string name="sign_up_with">Sign Up with</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heading">Heading</string>
    <string name="add_note">ADD NOTE</string>
    <string name="add_a_description">Add a description</string>
    <string name="search_notes">Search Notes</string>
    <string name="search">Search</string>
    <string name="my_notes">My Notes</string>
    <string name="enter_heading">Enter Heading</string>
    <string name="enter_description">Enter Description</string>
    <string name="set_date">Set Date</string>
    <string name="very_important">Very Important</string>
    <string name="submit">SUBMIT</string>
</resources>
