<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".login_signup.Sign_Up">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    1<ImageView
        android:id="@+id/sign_up_notebook"
        android:layout_width="221dp"
        android:layout_height="188dp"
        android:src="@drawable/notebook1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />


    <EditText
        android:id="@+id/sign_up_email_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/gradient2"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="18dp"
        android:elevation="20dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/email_id"
        android:paddingLeft="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_notebook"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/gradient2"
        android:paddingLeft="5dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="18dp"
        android:inputType="textPassword"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email_id"
        app:layout_constraintVertical_bias="0.053">

    </EditText>

    <ImageView
        android:id="@+id/sign_up_pwd_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eye"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_password"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_password"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="@+id/sign_up_password"
        app:layout_constraintTop_toTopOf="@+id/sign_up_password"
        app:layout_constraintVertical_bias="0.558" />

    <EditText
        android:id="@+id/sign_up_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="20dp"
        android:hint="@string/confirm_password"
        android:background="@drawable/gradient2"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="18dp"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password"
        app:layout_constraintVertical_bias="0.096">



    </EditText>

    <ImageView
        android:id="@+id/sign_up_pwd_toggle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eye"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_confirm_password"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="@+id/sign_up_confirm_password"
        app:layout_constraintTop_toTopOf="@+id/sign_up_confirm_password"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/gradient"
        android:elevation="17dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_password"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_up_with"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
        app:layout_constraintVertical_bias="0.263" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="58dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Already registered?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/log_in"
        android:textColor="#FF7642"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
